--- a/home.html
+++ b/home.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task Management Web</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="home.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="icon" href="image/list-check-solid.svg">
 </head>
 <body>
     <!-- This is a header which contains menu, logo and user account -->
@@ -15,7 +16,7 @@
         </div>
 
         <a href="#" class="logo">
-            <img src="Logo-Truong-Dai-hoc-Khoa-hoc-va-Cong-nghe-Ha-Noi.png" alt="Logo-Truong-Dai-hoc-Khoa-hoc-va-Cong-nghe-Ha-Noi">
+            <img src="image/Logo-Truong-Dai-hoc-Khoa-hoc-va-Cong-nghe-Ha-Noi.png" alt="Logo-Truong-Dai-hoc-Khoa-hoc-va-Cong-nghe-Ha-Noi">
             <span>Task Management</span>
         </a>
 
@@ -42,8 +43,10 @@
     </div>
 
     <div class="content">
-        <h2 id="content-title">Task Management System</h2>
-        <p id="content-description">Chọn một mục từ navigation bar bên trái để bắt đầu.</p>
+        <div class="content-inner">
+            <h2 id="content-title">Task Management System</h2>
+            <p id="content-description">Chọn một mục từ navigation bar bên trái để bắt đầu.</p>
+        </div>
     </div>
 
     <script src="script.js"></script>
