Modified home layout

--- a/home.html
+++ b/home.html
@@ -45,7 +45,7 @@
     <div class="content">
         <div class="content-inner">
             <h2 id="content-title">Task Management System</h2>
-            <p id="content-description">Chọn một mục từ navigation bar bên trái để bắt đầu.</p>
+            <p id="content-description">Select an item from the menu to get started</p>
         </div>
     </div>
 
